--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.logo {
+    width: 70px;
+    height: 70px;
+}
+
+h3 {
+    color: gray;
+}
+
+
+
