--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,29 +2,29 @@
     <div class="col-6">    
     <div class="card">
         <div class="card-header">
-          Fulano de Tal
+          
         </div>
         <div class="card-body">
-          <h5 class="card-title">Empresa X</h5>
+          <h5 class="card-title"></h5>
           <button class="btn btn-primary">Visualizar</button>
         </div>
       </div>
       <div class="card">
         <div class="card-header">
-          Fulano de Tal
+         
         </div>
         <div class="card-body">
-          <h5 class="card-title">Empresa Y</h5>
+          <h5 class="card-title"></h5>
           <button  class="btn btn-primary">Visualizar</button>
         </div>
       </div>
       <div class="card">
         <div class="card-header">
-          Fulano de Tal
+          
         </div>
         <div class="card-body">
-          <h5 class="card-title">Empresa Z</h5>
-          <button  class="btn btn-primary">Visualizar</button>
+          <h5 class="card-title"></h5>
+          <button class="btn btn-primary">Visualizar</button>
         </div>
       </div>
      </div> 
