--- a/src/app/company-add/company-add.component.html
+++ b/src/app/company-add/company-add.component.html
@@ -1,89 +1,98 @@
+<form [formGroup]="form" (ngSubmit)="criar()">
+    <div class="row mt-5" >
+        <div class="col-6">
+            
+                <div class="form-group">
+                    <h3>Dados do Solicitante</h3>
+                    <label>Responsável*</label>
+                    <input type="text" class="form-control" formControlName="resp">
+                </div>
+                <div class="form-group">
+                    <label>CPF*</label>
+                    <input type="text" id="cpf" class="form-control" formControlName="cpf" mask="000.000.000-00">
+                    
+                </div>
+                <div class="form-group">
+                    <label>Data Nascimento*</label>
+                    <input type="date" class="form-control" formControlName="data">
+                </div>
+                <h3>Dados da Empresa</h3>
+                <div class="form-group">
+                    <label>Nome Fantasia*</label>
+                    <input type="text" class="form-control" formControlName="nomeF">
+                </div>
+                <p>Escolha sua entidade de registro*</p>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      Cartório
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Junta Comercial
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      OAB
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <label class="form-check-label" for="exampleRadios2">
+                      RFB
+                    </label>
+                  </div>
+                
+                <div class="form-group">
+                    <label>Natureza Jurídica*</label>
+                    <input type="text" class="form-control" formControlName="natJur">
+                </div>
+            
 
-    <div class="row mt-5">
-      <div class="col-6">
-          <div class="form-group">
-              <h3>Dados do Solicitante</h3>
-              <label>Responsável:</label>
-              <input type="text" class="form-control">
-          </div>
-          <div class="form-group">
-              <label>CPF:</label>
-              <input type="text" id="cpf" class="form-control" mask="000.000.000-00">
-             
-          </div>
-          <div class="form-group">
-              <label>Data Nascimento:</label>
-              <input type="date" class="form-control">
-          </div>
-          <h3>Dados da Empresa</h3>
-          <div class="form-group">
-              <label>Nome Fantasia:</label>
-              <input type="text" class="form-control">
-          </div>
-          <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault"
-                  id="flexRadioDefault1">
-              <label class="form-check-label" for="flexRadioDefault1">
-                  Cartório
-              </label>
-          </div>
-          <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault"
-                  id="flexRadioDefault2" checked>
-              <label class="form-check-label" for="flexRadioDefault2">
-                  Junta Comercial
-              </label>
-          </div>
-          <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault"
-                  id="flexRadioDefault2" checked>
-              <label class="form-check-label" for="flexRadioDefault2">
-                  OAB
-              </label>
-          </div>
-          <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault"
-                  id="flexRadioDefault2" checked>
-              <label class="form-check-label" for="flexRadioDefault2">
-                  RFB
-              </label>
-          </div>
-          <div class="form-group">
-              <label>Natureza Jurídica:</label>
-              <input type="text" class="form-control">
-          </div>
-      </div>
-      <div class="col-6">
-          <div class="form-group">
-              <h3>Endereço da Empresa</h3>
-              <label>CEP:</label>
-              <input type="text" mask="00000-000" class="form-control">
-          </div>
-          <div class="form-group">
-              <label>Endereço:</label>
-              <input type="text" class="form-control">
-          </div>
-          <div class="form-group">
-              <label>Bairro:</label>
-              <input type="text" class="form-control">
-          </div>
+        </div>
+                
+                <div class="col-6">
+                    <div class="form-group">
+                        <h3>Endereço da Empresa</h3>
+                        <label>CEP*</label>
+                        <input type="text" mask="00000-000" class="form-control" formControlName="cep">
+                    </div>
+                    <div class="form-group">
+                        <label>Endereço*</label>
+                        <input type="text" class="form-control" formControlName="endereco">
+                    </div>
+                    <div class="form-group">
+                        <label>Bairro:</label>
+                        <input type="text" class="form-control" formControlName="bairro">
+                    </div>
 
-          <div class="form-group">
-              <label>Complemento:</label>
-              <input type="text" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label>Complemento</label>
+                        <input type="text" class="form-control" formControlName="complemento">
+                    </div>
 
-          <div class="form-group">
-              <label>Cidade:</label>
-              <input type="text" class="form-control">
-          </div>
-          <div class="form-group">
-              <label>Estado:</label>
-              <input type="text" class="form-control">
-          </div>
-          <button class="btn btn-primary" style="float: right;">Enviar</button>
-
-          
-      </div>
+                    <div class="form-group">
+                        <label>Cidade*</label>
+                        <input type="text" class="form-control" formControlName="cidade">
+                    </div>
+                    <div class="form-group">
+                        <label>Estado*</label>
+                        <input type="text" class="form-control" formControlName="estado">
+                    </div>        
+                </div>
+            
+            
+        
+                <button class="btn btn-primary" style="margin-left: 90%;"  [disabled]="form.invalid">Enviar</button>
+                
+               
+                
+            
+        
+    </div>    
+</form>
     
-  
